fixed the checkboxes and spacing
added a logo, fixed the checkboxes and adjusted the call to action spacing and font size.

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ body {
   font-family: "Roboto", sans-serif;
   background-color: #000 !important;
   color: rgb(255, 255, 255);
+  max-width: 375px;
+  max-width: 812px;
 }
 
 /* Iconography  */
@@ -16,6 +18,7 @@ body {
 #cta-btn {
   align-self: center;
   background-color: #f0c472;
+  margin-bottom: 50px;
 }
 
 /* Backgrounds */
@@ -48,39 +51,53 @@ header {
 }
 /*Checkbox */
 
-.checkmark {
-  display: block;
-  width: 30px;
-  height: 30px;
-  background-color: #000;
-  border-radius: 5px;
-  position: relative;
-  margin-right: 10px;
-  margin-top: 5px;
-  transition: background-color 0.4s;
-  cursor: pointer;
+/* testing some new checkboxes */
+
+label {
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 10%;
+  background-color: #231f20;
+  border-radius: 10px;
+  padding: 10px;
+}
+.checkbox__input {
+  input {
+    opacity: 0;
+    width: 1em;
+    height: 1em;
+  }
+}
+.checkbox__input {
+  display: grid;
+  grid-template-areas: "checkbox";
+
+  > * {
+    grid-area: checkbox;
+  }
 }
 
-#check:checked ~ .checkmark {
-  background-color: #5881b6;
+.checkbox__control {
+  display: inline-grid;
+  width: 1em;
+  height: 1em;
+  border-radius: 0.25em;
+  border: 2px solid currentColor;
 }
-
-.checkmark::after {
-  content: "";
-  position: absolute;
-  width: 15px;
-  height: 25px;
-  border-right: 4px solid rgb(255, 255, 255);
-  border-bottom: 4px solid rgb(255, 255, 255);
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotateZ(40deg);
-  opacity: 0;
-  transition: all 0.4s;
+.checkbox {
+  display: grid;
+  grid-template-columns: min-content auto;
+  grid-gap: 0.5em;
+  font-size: 2rem;
+  color: var(--color);
 }
-
-#check:checked ~ .checkmark::after {
-  opacity: 1;
+.checkbox__control svg {
+  transition: transform 0.1s ease-in 25ms;
+  transform: scale(0);
+  transform-origin: bottom left;
+}
+.checkbox__input input:checked + .checkbox__control svg {
+  transform: scale(1);
 }
 
 input[type="checkbox"] {
@@ -88,21 +105,33 @@ input[type="checkbox"] {
   -webkit-appearance: none;
 }
 
-/* Checklis Items
+/* Checklist Items
  */
 
 .item {
   font-weight: 200;
   align-self: center;
+  font-size: 16pt;
 }
 
 /* text */
 
 .CTA {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif !important;
-  font-size: 26pt !important;
+  font-size: 18pt;
   margin-left: 10px;
   text-align: center;
   color: #565656;
+}
+
+.nextSteps {
+  margin-top: 10%;
+  margin-bottom: 20%;
+}
+
+/* Space at the bottom to gaurd the Nav*/
+
+.spacer {
+  background-color: #000000;
+  height: 50px;
+  width: 100%;
 }
